- Make _stopWhenHit condition not count party members, and stop counting a
  monster as aggressive if it hit you in the past, but then attacked someone
  else
- "Total Damage" display in 's' command now includes damage from skills
- "exp reset" command now resets damage statistics in 's' command
- Portal recording has been fixed.
- Fix teleport using clip.

New features:
- Mask password input display '*' instead of your real password (Only on linux
  console)
- If old files (from before the CVS cleanup) are found, warn the user
  and bail out. Too many people are reporting "bugs" that are a result
  of conflicts with old files.
- More avoidGM modes. See the news avoid the new avoidGM_near config option.
- The autoresponse system is now back, and improved. The chat_resp.txt
  format has changed. Kore will also not respond to people who are repeating
  themselves.
- teleportAuto_search will now prevent attackAuto from attacking monsters in
  the event that no monsters you are searching for exist onscreen.
- chat.txt uses one line per message, allowing grepping.
- skillsAddAuto will now print a message when it auto-adds a skill.
- Display source and destination coordinates in "Recorded new portal" message.
- route_teleport is now a normal message instead of a debug message (something
  that made my party bot suddenly teleport away from me should not be silent).

New config options:
- ksPlayers is a comma-seperated lists of player names that should be treated
  as if they were in your party for the purpose of KS checks.
- beepDomains contains a list of message domains (see Log.pm) for which
  openkore will beep.
- beepDomains_notInTown contains a list of message domains that are exempted
  from beepDomains if you are in a town.
- beepOnChat and beepOnPM were removed. Use this instead:
  beepDomains publicchat,emotion,pm
- New selfCondition _whenPermitSkill _whenNotPermitSkill for use in auto-skill